fix video icon spacing.

--- a/Src/Csn.Retail.Editorial.Web/Features/Shared/Assets/Js/Modules/ReactComponents/SearchResultCard/searchResultCard.scss
+++ b/Src/Csn.Retail.Editorial.Web/Features/Shared/Assets/Js/Modules/ReactComponents/SearchResultCard/searchResultCard.scss
@@ -240,6 +240,7 @@
         font-weight: $font-weight-600;
         margin-top: 5px;
         margin-bottom: 10px;
+        margin-right: 15px;
         display: inline-block;
 
         &--review,
@@ -292,8 +293,7 @@
         align-items: baseline;
 
         &-image-count {
-            display: inline-block;
-            margin-left: 15px;
+            display: inline-block;            
             margin-right: 10px;
             color: $cs-light-grey-8;
             font-size: 12px;
